<resources>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="consultation">Consultation</string>
    <string name="appointment">Appointment</string>
    <string name="show_consultation">Show Patient Consultation</string>


    <string name="app_name">My Health</string>
    <string name="connection">Connection</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="sign_up">Sign up</string>

    <string name="phone">Phone</string>
    <string name="inscription">Inscription</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="age">Date of Birth</string>
    <string name="username">Username</string>
    <string name="appointment_list">Appointment List</string>
    <string name="take_appointment">Make An Appointment</string>
    <string name="observation">Observation</string>
    <string name="consult">Consult</string>


    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_help_fragment">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_connexion">Error connexion</string>
    <string name="error_parametters">Error parametters</string>
</resources>