<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_consultation"
            android:icon="@drawable/consultation"
            android:title="@string/consultation" />
        <item
            android:id="@+id/nav_appointment"
            android:icon="@drawable/appointment"
            android:title="@string/appointment" />

    </group>
</menu>