<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InscriptionActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inscription"
        android:textSize="30dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/blue_dark"/>
    <EditText
        android:id="@+id/txtFirstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstname"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_marginTop="@dimen/top"/>
    <EditText
        android:id="@+id/txtLastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastname"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_marginTop="@dimen/top"/>
    <EditText
        android:id="@+id/txtDateBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:textStyle="bold"
        android:textSize="30dp"
        android:inputType="date"
        android:layout_marginTop="@dimen/top"/>
    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:textStyle="bold"
        android:textSize="30dp"
        android:inputType="phone"
        android:layout_marginTop="@dimen/top"/>
    <EditText
        android:id="@+id/txtLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_marginTop="@dimen/top"/>
    <EditText
        android:id="@+id/txtPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textStyle="bold"
        android:textSize="30dp"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/top"/>
    <Button
        android:id="@+id/btnSubscribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top"
        android:layout_marginLeft="@dimen/left"
        android:layout_marginRight="@dimen/right"
        android:text="@string/inscription"
        android:textColor="@color/blue_dark"
        android:backgroundTint="@color/blue_light"

        android:textStyle="bold"/>

</LinearLayout>