<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/connection"
        android:textSize="30dp"
        android:textColor="@color/blue_dark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtLogin"
        android:layout_marginTop="@dimen/top"
        android:hint="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="30dp"/>
    <EditText
        android:id="@+id/txtPassword"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:textSize="30dp"/>
    <Button
        android:id="@+id/btnConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/connect"
        android:backgroundTint="@color/blue_dark"
        android:textSize="30dp"/>
    <Button
        android:id="@+id/btnInscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_up"
        android:backgroundTint="@color/blue_light"
        android:textSize="20dp"/>
</LinearLayout>