<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myhealth.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.myhealth.HelpFragment"
        android:label="help"
        tools:layout="@layout/help_fragment" />

    <fragment
        android:id="@+id/nav_appointment"
        android:name="com.example.myhealth.AppointmentFragment"
        android:label="@string/appointment"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_consultation"
        android:name="com.example.myhealth.ConsultationFragment"
        android:label="@string/consultation"
        tools:layout="@layout/fragment_consultation" />

   </navigation>